# Changelog

## django-docutils 0.29.0 (unreleased)

- _Add your latest changes from PRs here_

### Development

#### chore: Implement PEP 563 deferred annotation resolution (#440)

- Add `from __future__ import annotations` to defer annotation resolution and reduce unnecessary runtime computations during type checking.
- Enable Ruff checks for PEP-compliant annotations:
  - [non-pep585-annotation (UP006)](https://docs.astral.sh/ruff/rules/non-pep585-annotation/)
  - [non-pep604-annotation (UP007)](https://docs.astral.sh/ruff/rules/non-pep604-annotation/)

For more details on PEP 563, see: https://peps.python.org/pep-0563/

### Development

- Relax `types-docutils` version constraint (#418)

## django-docutils 0.28.0 (2024-12-20)

_Maintenance release only, no bug fixes or new features_

### Breaking changes (#439)

- Drop Python 3.8

  The minimum version of Python in this and future releases is Python 3.9.

  Python 3.8 reached end-of-life status on October 7th, 2024 (see PEP 569).

### Development

- Aggressive automated lint fixes via `ruff` (#437)

  via ruff v0.8.4, all automated lint fixes, including unsafe and previews were applied for Python 3.9:

  ```sh
  ruff check --select ALL . --fix --unsafe-fixes --preview --show-fixes; ruff format .
  ```

## django-docutils 0.27.0 (2024-11-26)

_Maintenance release only, no bug fixes or new features_

### Breaking changes

#### Project and package management: poetry to uv (#435)

[uv] is the new package and project manager for the project, replacing Poetry.

[uv]: https://github.com/astral-sh/uv

#### Build system: poetry to hatchling (#435)

[Build system] moved from [poetry] to [hatchling].

[Build system]: https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
[poetry]: https://github.com/python-poetry/poetry
[hatchling]: https://hatch.pypa.io/latest/

#### Drop Django 3.2 (#430)

Django 4.2+ is the new minimum version. Support for django 3.2 is dropped.
